# lkqlua_jit

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  README.md  TODOS.md  build.rs  requirements.txt  test.lkql
luajit/src/: lj_debug.c  lua.h
luajit/src/jit/: p.lua
src/: builtins.rs  bytecode.rs  diagnostics.rs  engine.rs  error_templates.rs  errors.rs  intermediate_tree.rs  lib.rs  lowering.rs  lua.rs  main.rs  report.rs  runtime.rs  sources.rs
src/builtins/: functions.rs  traits.rs  types.rs  utils.rs
src/builtins/traits/: indexable.rs  iterable.rs  sized.rs
src/builtins/types/: bool.rs  function.rs  int.rs  list.rs  namespace.rs  obj.rs  pattern.rs  str.rs  stream.rs  tuple.rs  unit.rs
src/builtins/types/stream/: lazy_comprehension.rs
src/bytecode/: extended_bytecode.rs  op_codes.rs  runtime_data.rs
src/engine/: analysis_lib.rs  runtime.rs
src/intermediate_tree/: compilation.rs  constant_eval.rs  lkql_lowering.rs  typing.rs
src/intermediate_tree/compilation/: frame.rs
src/lowering/: lkql.rs
src/runtime/: builtins.rs  engine.rs
src/runtime/builtins/: functions.rs  traits.rs  types.rs  utils.rs  values.rs
src/runtime/builtins/traits/: indexable.rs  iterable.rs  sized.rs
src/runtime/builtins/types/: bool.rs  int.rs  list.rs  obj.rs  str.rs  stream.rs  tuple.rs  unit.rs
testsuite/: testsuite.py
testsuite/libfoolang/: langkit.yaml  nodes.lkt
testsuite/libfoolang/extensions/src/: libfoolang-implementation-extensions.adb  libfoolang-implementation-extensions.ads
testsuite/tests/builtins/units/: test.out  test.yaml
(+338 files in other folders)
