[package]
name = "lkqlua_jit"
version = "0.1.0"
edition = "2024"

[dependencies]
# For now the liblkqllang path is absolute since it hasn't been published
liblkqllang = { path = "/home/guerrier/Documents/AdaCore/langkit-query-language/lkql/build/rust" }
clap = { version = "4.5.37", features = ["derive"]}
leb128 = "0.2.5"
ariadne = { version = "0.5.1", features = ["auto-color"] }
num-bigint = "0.4.6"
pretty-hex = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11.2"
